# AikatsuDOWN

./: Cargo.toml  README.md
data/: aikatsup20230422.csv
src/: main.rs
